# Auto-Complete-Graph

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  To_write_Keep.md  build.sh  package.xml  rosinstall
ACG_folder/: Optimized.rviz  acg.rviz  param.txt
ACG_params/: Optimized.rviz
Videos/: normal_optimization.ogv  normal_start_then_DCS.ogv
basementGraph/: acg_0_prior.g2o  acg_3nodes.g2o  acg_6nodes.g2o
basementGraph/FixedRobot/FixedLandmark/: acg.txt  acg_2nodes.g2o
basementGraph/FixedRobot/FixedLandmark/FixedLinks/: acg.txt  acg_0_prior.g2o  acg_2nodes.g2o  acg_3nodes.g2o  acg_4nodes.g2o  acg_5nodes.g2o  acg_6nodes.g2o  acg_7nodes.g2o
basementGraph/FixedRobot/FixedLandmark/MovingLinks/: acg.txt  acg_4nodes.g2o  acg_5nodes.g2o  acg_7nodes.g2o
basementGraph/FixedRobot/MovingLandmark/: acg.txt  acg_2nodes.g2o  acg_3nodes.g2o  acg_4nodes.g2o  acg_5nodes.g2o  acg_6nodes.g2o  acg_7nodes.g2o
basementGraph/FixedRobot/MovingLandmark/FixedLinks/: acg.txt  acg_2nodes.g2o  acg_3nodes.g2o  acg_4nodes.g2o  acg_5nodes.g2o  acg_6nodes.g2o  acg_7nodes.g2o
basementGraph/FixedRobot/MovingLandmark/NotSoFixedLinks/: acg.txt
config/: fake_tobot_arbotix.yaml
config/nav/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
doc/: 1.txt
doc/Chi/: chi2s_10.txt  chi2s_11.txt  chi2s_13.txt  chi2s_14.txt  chi2s_15.txt  chi2s_18.txt  chi2s_21.txt  chi2s_22.txt  chi2s_23.txt  chi2s_27.txt  chi2s_6.txt  chi2s_8.txt  chi2s_9.txt
doc/HUBER+DCS/Dist8/Case2/: param.txt
doc/HUBER/Case1/: param.txt
doc/IROS_Test/KernelSize/1.5/: 2_param.txt
doc/IROS_Test/Outlier/: 1_param.txt  2_param.txt  4_param.txt  5_param.txt  6_param.txt
doc/IROS_Test/Rotation/-6deg/: param.txt
doc/IROS_Test/Rotation/5deg/: param.txt
doc/Link1-3/: param.txt
doc/Link1.5-3/1%/NoRobustKernel/: param.txt
doc/Link1.5-3/1%/RobustKernel/: param.txt
doc/Link1.5-3/10%/RobustKernel/: param.txt
doc/Link2-4/1%/MaxAge/1/: param.txt
doc/Link2-4/10%/: param.txt
doc/Link2-4/50%/RobustKernel/: param.txt
doc/Link2-4/90%/NoRobustKernel/: param.txt
doc/Link2/Case2/: param.txt
doc/Link4-5/Dist3/: param.txt
doc/MCL/: basement_publisher_backup_launch.launch_nckp
doc/Outlier/: 3_param.txt
doc/RandomTest/test1/: param.txt
doc/RandomTest/test2/: param.txt
doc/RandomTest/test5userRobCov/: param.txt
doc/RandomTest/test6/: param.txt
doc/RandomTest/test7userRobCov/: param.txt
doc/test3/: param.txt
doc/test4/: param.txt
include/auto_complete_graph/: ACG.hpp  ACG.tpp  ACGBase.hpp  ACGBase.tpp  ACGPrior.hpp  ACGPriorSE2.hpp  ACG_feature.hpp  ACG_localization.hpp  ACG_logger.hpp  Basement.hpp  BasementFull.hpp  GoodMatchings.hpp  GraphElements.hpp  KeypointPriorDetector.hpp  LabFull.hpp  Match.hpp  OptimizableAutoCompleteGraph.hpp  Optimizer.hpp  PriorLoaderInterface.hpp  RvizPoints.hpp  VisuACG.hpp  acg_conversion.hpp  conversion.hpp  covariance.hpp  utils.hpp
include/auto_complete_graph/Features/: ACG_feature.hpp  KeypointPriorDetector.hpp
include/auto_complete_graph/Localization/: ACGPriorXY.hpp  ACG_localization.hpp  AcgMclLocalization.hpp  GoodMatchingLocalization.hpp  Localization.hpp  LocalizationConvertion.hpp  MatchLocalization.hpp  NDTCellsBundle.hpp  RvizPointsLocalization.hpp  VisuACGLocalization.hpp
include/auto_complete_graph/VertexAndEdge/: EdgeInterfaceMalcolm.hpp  EdgeLandmark.hpp  EdgeLinkXY.hpp  EdgeLocalization.hpp  EdgeNDTCell.hpp  EdgeNDTCellObservation.hpp  EdgeOdometry.hpp  EdgePointXYACG.hpp  EdgePriorObservation.hpp  EdgeSE2ACG.hpp  EdgeSE2PointXYACG.hpp  EdgeSE2Prior.hpp  EdgeXYPrior.hpp  LocalizationPointer.hpp  VertexLandmarkNDT.hpp  VertexNDTCell.hpp  VertexPointXYACG.hpp  VertexSE2ACG.hpp  VertexSE2Prior.hpp  VertexSE2RobotLocalization.hpp  VertexSE2RobotPose.hpp  VertexXYPrior.hpp  registration.hpp
jff_maps/: basement2d_laser_gustav_map_r05.jff
launch/: acg-ms2.launch  acg.launch  basement_publisher.launch  cartographer.launch  graph_map_dortmunf_laser.launch  hannover.launch  movebase_map.launch  ncfm-ms2.launch  tf_launch.launch  velodyne_2d.launch
launch/nav/: fake_move_base_obstacle.launch  move_base.launch  move_base_blank_map.launch
log/: massif.out.12761  valgrind_mem.md
maps/: occupancygrid_full_2nodes.yaml
msg/: ACG.msg  ACGMaps.msg  ACGMapsOM.msg  GraphMapLocalizationMsg.msg  LocalizationMsg.msg
msg/VerticesAndEdges/: VertexLandmarkNDTMsg.msg  VertexPointXYMsg.msg  VertexSE2Msg.msg  VertexSE2RobotPoseMsg.msg
src/: ACG.cpp  ACGPriorSE2.cpp  ACG_feature.cpp  ACG_localization.cpp  CMakeLists.txt  OptimizableAutoCompleteGraph.cpp  PriorLoaderInterface.cpp  VisuACG.cpp  acg_node.cpp  acg_node_feature.cpp  acg_node_localization.cpp  acg_node_logger.cpp  acg_node_review.cpp  acg_node_rviz.cpp  acg_node_rviz_full.cpp  acg_node_rviz_full_fast.cpp  acg_node_rviz_full_noise.cpp  acg_node_rviz_lab_fast.cpp  acg_node_rviz_noise.cpp  acg_node_rviz_nooptimi_full.cpp  acg_node_rviz_noptimi.cpp  graph_map_publisher_localization.cpp
src/Features/: ACG_feature.cpp  acg_node_feature.cpp
src/Localization/: ACGPriorXY.cpp  ACG_localization.cpp  CMakeLists.txt  NDTCellsBundle.hpp  acg_node_localization.cpp  graph_map_fuser_node.cpp  graph_map_publisher_localization.cpp  ndtmap_pub_testing.cpp  publish_odometry_to_tf.cpp  test_prior_localization.cpp
src/VertexAndEdge/: CMakeLists.txt  EdgeNDTCell.cpp  EdgePointXYACG.cpp  EdgeSE2ACG.cpp  EdgeSE2PointXYACG.cpp  EdgeSE2Prior.cpp  EdgeXYPrior.cpp  VertexPointXYACG.cpp  VertexSE2ACG.cpp  registration.cpp
test_SIFT/: test_sift.py
tests/: CMakeLists.txt  plot_line.py  test_affine_transfo.cpp  test_covvalue.cpp  test_graph.cpp  test_graph_localization.cpp  test_graph_map.cpp  test_graph_noise.cpp  test_grid_map.cpp  test_links.cpp  test_martin.cpp  test_match.cpp  test_other_graph.cpp  test_transfo.cpp
tests/ILIAD/: points.org
tests/t_test/: normaltest.py  readfile.py  t_test.py
tests/t_test/Chi/: chi2s_12.txt  chi2s_16.txt  chi2s_17.txt  chi2s_19.txt  chi2s_20.txt  chi2s_24.txt  chi2s_25.txt  chi2s_26.txt  chi2s_5.txt  chi2s_7.txt
(+32 files in other folders)
